# whisper-script

./: .gitignore  MANIFEST.in  README.md  config.yaml.example  pyproject.toml
src/whisper_transcription/: __init__.py  cli.py  config.py  main.py  processing.py  services.py  transcription.py  ui.py
src/whisper_transcription/providers/: __init__.py  google_provider.py  groq_provider.py  openai_provider.py
